<?xml version="1.0"?>
<package>
  <name>robotiq_action_server</name>
  <version>0.0.0</version>
  <description>The robotiq_action_server package</description>

  <maintainer email="fsuarez6@todo.todo">fsuarez6</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>robotiq_c_model_control</build_depend>
  <build_depend>robotiq_s_model_control</build_depend>
  <build_depend>rospy</build_depend>
  
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>robotiq_c_model_control</run_depend>
  <run_depend>robotiq_s_model_control</run_depend>
  <run_depend>rospy</run_depend>

</package>
